# fasta_filter

./: .gitignore  Cargo.toml  README.md  fasta_parser.py
pyscripts/: fasta_filter.py  fasta_filter_original.py  fasta_parser.py
src/: main.rs
