[package]
name = "fasta_filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.4", features = ["derive"] }
clap-stdin = "0.2.1"
regex = "1.9.5"
seq_io = "0.3.2"
